--- a/styles/print.css
+++ b/styles/print.css
@@ -25,7 +25,7 @@
   margin: 1.375em 2.5em 1.375em 3em;
   @right-top {
     writing-mode: vertical-lr;
-    content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit) string(statute-now, last) string(statute-suffix, last) '\fe36';
+    content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last) '\fe36';
     margin: 0 .925em 0 .575em;
   }
   @right-bottom {
@@ -42,7 +42,7 @@ body {
 
 header {
   string-set: statute-title content(), statute-unit '', statute-suffix '';
-  margin-top: -0.5rem;
+  margin-top: 0.75rem;
 }
 
 .history {
